feat(api): add server-side upload + get metadata + cloudinary integration
